@@ -25,9 +25,9 @@
       (print-unreadable-object (object stream :type t)
         (write (class-classname object) :stream stream)
         (when (standard-class-p object)
-          (if (and (slot-boundp object 'current-version)
+          (if (and (slot-boundp object '$current-version)
                    (class-version-p (class-current-version object))
-                   (slot-boundp object 'precedence-list))
+                   (slot-boundp object '$precedence-list))
             (progn
               (unless (%class-precedence-list object) ; not yet finalized?
                 (write-string " " stream)
