@@ -13,10 +13,10 @@
 
 (defvar *<specializer>-defclass*
   '(defclass specializer (standard-stablehash metaobject)
-     ((direct-generic-functions ; weak-list or weak-hash-table of GFs that use
+     (($direct-generic-functions ; weak-list or weak-hash-table of GFs that use
                                 ; this specializer
         :initform nil)
-      (direct-methods           ; weak-list or weak-hash-table of methods that
+      ($direct-methods          ; weak-list or weak-hash-table of methods that
                                 ; use this specializer
         :initform nil))
      (:fixed-slot-locations)))
@@ -53,7 +53,7 @@
 (defvar <eql-specializer> 'eql-specializer)
 (defvar *<eql-specializer>-defclass*
   '(defclass eql-specializer (specializer)
-     ((singleton :initarg singleton))
+     (($singleton :initarg singleton))
      (:fixed-slot-locations)))
 (defvar *<eql-specializer>-class-version* (make-class-version))
 
