@@ -13,7 +13,7 @@
 
 (defvar *<standard-stablehash>-defclass*
   '(defclass standard-stablehash ()
-     ((hashcode :initform (sys::random-posfixnum))) ; GC invariant hash code
+     (($hashcode :initform (sys::random-posfixnum))) ; GC invariant hash code
      (:fixed-slot-locations)))
 
 ;; Fixed slot locations.
